--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
@@ -6,6 +6,6 @@
 >
   <rte-icon *ngIf="showIcon()" class="badge-icon" [name]="icon()!" [size]="iconSize()!" />
   <span *ngIf="showText()" class="badge-text">
-    {{ displayCount() }}
+    {{ badgeText() }}
   </span>
 </div>
